# gpu-nd

./: CMakeLists.txt  README.md  gpu_nested_dissection  gpu_nested_dissection copy.cu  gpu_nested_dissection.cu
include/: fast_nested_dissection.h  metis_parser.h  mtx_reader.h  nested_dissection.h  structs.h
src/: main.cu  metis_parser.cpp  nested_dissection_algorithms.cu  nested_dissection_core.cu
